[package]
name = "lisp-util"
version = "0.1.0"
description = "Utility code for lisp_fn."
edition = "2018"

[dependencies]
libc = "0.2.101"
errno = "0.2.7"
darling = "0.2"
syn = { version = "0.11.11", features = ["full"] }

[lib]
path = "lib.rs"

[features]
# Treat warnings as a build error on Travis.
strict = []
